continuation from device B

--- a/APIs/sidar/src/main/resources/application.properties
+++ b/APIs/sidar/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.port=5500
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://5.tcp.eu.ngrok.io:11794/Telvan
-spring.datasource.username= postgres
-spring.datasource.password= Admin
+spring.datasource.url=jdbc:postgresql://sidar-dev-db.postgres.database.azure.com:5432/sidar
+spring.datasource.username= SidarAdmin0
+spring.datasource.password= 0nimdAradiS
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
