--- a/APIs/sidar/src/main/resources/application.properties
+++ b/APIs/sidar/src/main/resources/application.properties
@@ -5,7 +5,8 @@ server.port=5500
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://sidar-dev-db.postgres.database.azure.com:5432/sidar
+
+spring.datasource.url=jdbc:postgresql://sidar-test-db.postgres.database.azure.com:5432/Sidar
 spring.datasource.username= SidarAdmin0
 spring.datasource.password= 0nimdAradiS
 
