--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Aug 08 00:32:28 EAT 2024
-sdk.dir=/Users/frank/Library/Android/sdk
-Q
+#Sat Aug 24 22:00:59 EAT 2024
+Q=
+sdk.dir=C\:\\Users\\joy\\AppData\\Local\\Android\\Sdk
